# gnome-search-provider-steam

./: Cargo.toml
src/: main.rs
