[package]
name = "gnome-search-provider-steam"
version = "2.0.0"
edition = "2021"
authors = ["Tryton Lux <code@trytonvanmeer.dev>"]

[dependencies]
anyhow = "1"
gio = "0.22"
search-provider = { version = "0.13", default-features = false, features = ["tokio"] }
steamlocate = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-journald = "0.3"
tracing-subscriber = "0.3"
zbus = { version = "5", features = ["tokio"] }
